--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -8,6 +8,7 @@
       <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
     </svg>
     {{search submit=false instant=settings.instant_search class='search search-full'}}
+    <span class="title">Search for answer</span>
   </div>
 </section>
 
@@ -19,6 +20,17 @@
         {{#each categories}}
           {{#if ../has_multiple_categories}}
             <li class="blocks-item">
+              <div class='category-image'>
+                {{#is name 'COURSES & PROGRAMS'}}
+                    <img src="{{asset 'icon-program.png'}}" />
+                {{/is}}
+                {{#is name 'PAYMENTS & REFUNDS'}}
+                    <img src="{{asset 'icon-payment.png'}}" />
+                {{/is}}
+                {{#is name 'GENERAL FAQs'}}
+                    <img src="{{asset 'icon-faqs.png'}}" />
+                {{/is}}
+              </div>
               <a href='{{url}}' class="blocks-item-link">
                 <span class="blocks-item-title">{{name}}</span>
                 <span class="blocks-item-description">{{excerpt description}}</span>
