--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -11,8 +11,30 @@ $header-height: 71px;
   padding-bottom: 20px !important;
 }
 
+.support-center {
+  color: $site_theme_color;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 9px 0 0;
+  line-height: 18px;
+  display: inline-block;
+
+  @include tablet {
+    font-size: 24px;
+    padding: 12px 0 0;
+    line-height: 32px;
+  }
+}
+
 .logo {
-  width: 170px;
+  width: 120px;
+  float: left;
+  margin: 0 10px 0 0;
+
+  @include tablet {
+    width: 170px;
+    margin: 0 20px 0 0;
+  }
 
   img {
     width: 100%;
