--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -7,8 +7,7 @@
       <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
       <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
     </svg>
-    {{search submit=false instant=settings.instant_search class='search search-full'}}
-    <span class="title">Search for answer</span>
+    {{search submit=true instant=settings.instant_search class='search search-full'}}
   </div>
 </section>
 
