--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -29,7 +29,7 @@
     }); var f = d.getElementsByTagName(s)[0],
       j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
         'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', '{{ APIKEYS.GTM_TRACKING_ID }}');</script>
+  })(window, document, 'script', 'dataLayer', 'GTM-MT2XTXB');</script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MT2XTXB" height="0" width="0"
     style="display:none;visibility:hidden"></iframe></noscript>
