--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -51,5 +51,5 @@
   </div>
 </footer>
 <script>
-  document.getElementsById("date").append(new Date().getFullYear());
+  document.getElementById("date").append(new Date().getFullYear());
 </script>
