style: update logo

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -39,7 +39,8 @@
     }
 
     img {
-      width: 78px;
+      width: 129px;
+      height: 33px;
       margin: 0 auto 15px;
 
       @include tablet {
