--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,9 +1,9 @@
 <header class="header">
   <div class="header-left">
     <div class="logo">
-      <a href={{settings.mit_link}} class="mit-link" />
-      <a href={{settings.xpro_link}} class="xpro-link"> </a>
-      <img src="{{settings.logo}}" class="site-logo" />
+      <a href={{settings.xpro_link}} class="xpro-link"> 
+        <img src="{{settings.logo}}" class="site-logo" />
+      </a>
     </div>
     {{#link 'help_center' class="support-center"}}
       SUPPORT CENTER
