--- a/style.css
+++ b/style.css
@@ -1362,6 +1362,8 @@ ul {
 }
 .hero .search {
   overflow: hidden;
+  border-radius: 0;
+  border-style: none;
 }
 .hero .search:before {
   right: 125px;
@@ -1381,6 +1383,7 @@ ul {
   min-width: 100px;
   padding: 0 10px;
   text-transform: uppercase;
+  margin-left: 20px;
 }
 @media (min-width: 768px) {
   .hero .search input[type=submit] {
@@ -1391,10 +1394,15 @@ ul {
   float: left;
   width: calc(100% - 110px);
   font-weight: 600;
+  border-style: solid;
+  border-width: 1px;
+}
+.hero .search input[type=search]:focus {
+  border-color: $brand_color;
 }
 @media (min-width: 768px) {
   .hero .search input[type=search] {
-    width: calc(100% - 150px);
+    width: calc(100% - 195px);
   }
 }
 
