--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -30,6 +30,8 @@
 
   .search {
     overflow: hidden;
+    border-radius: 0;
+    border-style: none;
 
     &:before {
       right: 125px;
@@ -48,6 +50,7 @@
       min-width: 100px;
       padding: 0 10px;
       text-transform: uppercase;
+      margin-left: 20px;
 
       @include tablet {
         width: 134px;
@@ -58,9 +61,15 @@
       float: left;
       width: calc(100% - 110px);
       font-weight: 600;
+      border-style: solid;
+      border-width: 1px;
+
+      &:focus {
+        border-color: $brand_color;
+      }
 
       @include tablet {
-        width: calc(100% - 150px);
+        width: calc(100% - 195px);
       }
     }
   }
