--- a/styles/_home-page.scss
+++ b/styles/_home-page.scss
@@ -86,16 +86,16 @@
   .blocks-list {
 
     li {
-      border-color: $link_color;
+      border-color: $brand_color;
 
-      h4 {
-        color: $link_color;
+      .blocks-item-title {
+        color: $brand_color;
         font-size: 24px;
         line-height: 25px;
         font-weight: 600;
       }
 
-      p {
+      .blocks-item-description {
         color: black;
         font-size: 18px;
         line-height: 22px;
@@ -107,11 +107,11 @@
 
         a {
 
-          h4 {
-            color: $link_color;
+          .blocks-item-title {
+            color: $brand_color;
           }
 
-          p {
+          .blocks-item-description {
             color: black;
           }
         }
