--- a/style.css
+++ b/style.css
@@ -788,6 +788,7 @@ ul {
   width: auto;
   min-width: 71px;
   cursor: pointer;
+  color: $brand_color;
 }
 .nav-wrapper-mobile .menu-button-mobile .icon-menu {
   padding: 7px;
@@ -848,7 +849,7 @@ ul {
   padding: 8px 24px;
   width: 100%;
   height: 100%;
-  color: $text_color;
+  color: $link_color;
 }
 .nav-wrapper-mobile .menu-list-mobile-items a:active, .nav-wrapper-mobile .menu-list-mobile-items a:focus, .nav-wrapper-mobile .menu-list-mobile-items a:hover {
   background-color: #f3f3f3;
