--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -148,6 +148,7 @@ $header-height: 71px;
     width: auto;
     min-width: 71px;
     cursor: pointer;
+    color: $brand_color;
 
     .icon-menu {
       padding: 7px;
@@ -224,7 +225,7 @@ $header-height: 71px;
       padding: 8px 24px;
       width: 100%;
       height: 100%;
-      color: $text_color;
+      color: $link_color;
 
       &:active, &:focus, &:hover {
         background-color: #f3f3f3;
