chore: redirect user to https://openlearning.mit.edu/ upon clicking footer logo

--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -15,7 +15,9 @@
   {{/if}}
   <div class="footer-inner">
     <div class="company-info">
-        <img src="{{settings.mit_footer_logo}}">
+        <a href="https://openlearning.mit.edu">
+          <img src="{{settings.mit_footer_logo}}" alt="MIT" loading="lazy">
+        </a>
         <address>
           {{settings.mit_address}}
         </address>
