fix: style for submit button and support center

--- a/style.css
+++ b/style.css
@@ -650,7 +650,7 @@ ul {
 }
 
 .support-center {
-  color: $site_theme_color;
+  color: $site_theme_color !important;
   font-weight: 600;
   font-size: 14px;
   padding: 5px 0 0;
@@ -999,6 +999,7 @@ ul {
 }
 .footer .submit-a-request {
   text-transform: uppercase;
+  text-decoration: none;
 }
 .footer a {
   color: white;
