--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -17,7 +17,7 @@ $header-height: 71px;
 }
 
 .support-center {
-  color: $site_theme_color;
+  color: $site_theme_color !important;
   font-weight: 600;
   font-size: 14px;
   padding: 5px 0 0;
