--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -77,6 +77,7 @@
       </section>
     {{/if}}
   </section>
+<!-- Hide community/recent_activity from Zendesk theme as we don't have these enabled -->
 <!--
   {{#if help_center.community_enabled}}
     <section class="section home-section community">
