Sync Xpro Zendesk theme with the upstream. (#14)
* style: zendesk Theme updates

* style: zenDesk theme updates: round 1

* style: zendesk round 2 changes

* fix: removed phone number from footer

* fix: update the font sizes

* fix: improve readability of Support Center (Zendesk) pages

* fix: add Google Tag Manager to Zendesk pages (#8)

* add Google Tag Manager to Zendesk pages

* address Brian's feedback

* add empty line at the end of file

* fix: update copyright date (#9)

* update copyright date

* fixes

* fix: update favicon (#10)

* fix: updated article default settings (#11)

Defaulted the following to false: article author, article comments, follow article, article sharing

* fix: open search in new tab (#6)

Co-authored-by: asadiqbal <aiqbal@edx.org>

* feat: improve input field text visibility (#12)

* style: update logo and Readme (#13)

* style: update logo

* fix broken readme links and add quick setup guide

* add quick setup guide

* update favicon

* address readme feedback

* fix: upstream changes (part 1)

* fix: upstream changes (part 2)

* fix: inconsistent branding

* fix: readme

* fix: block items styles and increase search icon fonts

* fix: the company address text alignment in the footer

* fix: footer

* chore: redirect user to https://openlearning.mit.edu/ upon clicking footer logo

* chore: removed unused conf

* fix: style for submit button and support center

* docs: add comments on hiding community

---------

Co-authored-by: asadiqbal <aiqbal@edx.org>
Co-authored-by: Umar Asghar <umar.asghar@arbisoft.com>
Co-authored-by: Brian Grossman <bgrossman@alum.mit.edu>
Co-authored-by: Asad Iqbal <7334669+asadiqbal08@users.noreply.github.com>
Co-authored-by: Asad Ali <asad.ali@arbisoft.com>
Co-authored-by: Arslan Ashraf <34372316+arslanashraf7@users.noreply.github.com>
Co-authored-by: Arslan <arslan.ashraf@arbisoft.com>

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,8 @@
 // Variables
 
 // Colors
+$brand_color: #006b9c !default;
+$background_color: #fff;
 $hover-button-color: zass-darken($brand_color, 20%);
 $secondary-text-color: zass-lighten($text_color, 20%);
 
@@ -8,9 +10,9 @@ $primary-shade: zass-darken($background_color, 3%); //#f8f8f8 for the default ba
 $secondary-shade: zass-darken($background_color, 5%); //#f2f2f2 for the default background_color
 
 $font-size-bigger: 16px;
-$font-size-base: 15px;
+$font-size-base: 18px;
 $font-size-navigation: 14px;
-$font-size-small: 13px;
+$font-size-small: 18px;
 $font-size-smaller: 11px;
 
 $high-contrast-border-color: #87929D; // maintains a 3:1 contrast ratio with default background color (#FFF). Use for controls and inputs
@@ -20,7 +22,7 @@ $menu-border-color: #d8dcde;
 $button-color: $brand_color;
 
 $input-font-size: 14px;
-$field-text-color: #666;
+$field-text-color: #797676;
 $field-text-focus-color: #555;
 
 // Breakpoints variables
@@ -28,6 +30,10 @@ $tablet-width: 768px;
 $desktop-width: 1024px;
 $max-width-container: 1160px;
 
+// Fonts
+$font-weight-base: 400;
+$font-weight-light: 300;
+$font-weight-normal: 500;
 $font-weight-semibold: 600;
 
 // Transitions
