--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -229,6 +229,7 @@
 
   &-item {
     display: block;
+    font-weight: $font-weight-base;
     margin-top: 10px;
     margin-bottom: 16px;
     overflow: hidden;
@@ -244,5 +245,14 @@
 
   li {
     margin-bottom: 15px;
+  }
+
+  a {
+    text-decoration: underline;
+    color: $article_link_color;
+  
+    &:visited {
+      color: $visited_article_link_color;
+    }
   }
 }
