--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -8,6 +8,7 @@ body {
   color: $text_color;
   font-family: $text_font;
   font-size: $font-size-base;
+  font-weight: $font-weight-normal;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 
@@ -29,7 +30,7 @@ h6 {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 35px;
 }
 
 h2 {
@@ -37,7 +38,7 @@ h2 {
 }
 
 h3 {
-  font-size: 18px;
+  font-size: 22px;
   font-weight: $font-weight-semibold;
 }
 
