--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,17 +2,56 @@
 $header-height: 71px;
 
 .header {
+
+  .submit-a-request {
+    text-transform: uppercase;
+  }
+
   @include max-width-container;
   position: relative;
   align-items: center;
   display: flex;
-  height: $header-height;
   justify-content: space-between;
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
 }
 
-.logo img {
-  max-height: 37px;
-  vertical-align: middle;
+.support-center {
+  color: $site_theme_color !important;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 5px 0 0;
+  line-height: 18px;
+  display: inline-block;
+
+  @include tablet {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+.logo {
+  position: relative;
+  float: left;
+  margin: 0 10px 0 0;
+
+  .xpro-link {
+    z-index: 2;
+    width: 125px;
+    height: 35px;
+  }
+
+  @include tablet {
+    width: 125px;
+    height: 35px;
+    margin: 0 20px 0 0;
+  }
+
+  img {
+    width: 125px;
+    height: 35px;
+    display: block;
+  }
 }
 
 .logo span {
@@ -83,8 +122,9 @@ $header-height: 71px;
     border: 0;
     color: $link_color;
     display: none;
-    font-size: 14px;
+    font-size: 18px;
     padding: 0 20px 0 0;
+    font-weight: 500;
     width: auto;
 
     [dir="rtl"] & { padding: 0 0 0 20px;}
@@ -108,6 +148,7 @@ $header-height: 71px;
     width: auto;
     min-width: 71px;
     cursor: pointer;
+    color: $brand_color;
 
     .icon-menu {
       padding: 7px;
@@ -184,7 +225,7 @@ $header-height: 71px;
       padding: 8px 24px;
       width: 100%;
       height: 100%;
-      color: $text_color;
+      color: $link_color;
 
       &:active, &:focus, &:hover {
         background-color: #f3f3f3;
