--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,16 +1,76 @@
 /***** Hero component *****/
+
 .hero {
-  background-image: url($homepage_background_image);
-  background-position: center;
-  background-size: cover;
-  height: 300px;
+  background: #2a2929 url($mit_background) repeat-x 50% 100%;
+  height: 170px;
   padding: 0 20px;
   text-align: center;
   width: 100%;
 
+  @include tablet {
+    height: 300px;
+  }
+
   &-inner {
+
     @include vertical-align;
-    max-width: 610px;
+    max-width: 765px;
     margin: 0 auto;
+  }
+
+  .title {
+    color: white;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 600;
+    display: block;
+    text-align: left;
+    padding: 10px 0 0;
+  }
+
+  .search {
+    overflow: hidden;
+    border-radius: 0;
+    border-style: none;
+
+    &:before {
+      right: 125px;
+      @include tablet {
+        right: 165px;
+      }
+    }
+
+    input[type="submit"] {
+      float: right;
+      width: 100px;
+      background: #355B6B;
+      font-size: 20px;
+      font-weight: 600;
+      height: 65px;
+      min-width: 100px;
+      padding: 0 10px;
+      text-transform: uppercase;
+      margin-left: 20px;
+
+      @include tablet {
+        width: 134px;
+      }
+    }
+
+    input[type="search"] {
+      float: left;
+      width: calc(100% - 110px);
+      font-weight: 600;
+      border-style: solid;
+      border-width: 1px;
+
+      &:focus {
+        border-color: $brand_color;
+      }
+
+      @include tablet {
+        width: calc(100% - 195px);
+      }
+    }
   }
 }
