--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -7,7 +7,7 @@
       <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
       <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
     </svg>
-    {{search submit=false instant=settings.instant_search class='search search-full'}}
+    {{search submit=true instant=settings.instant_search class='search search-full'}}
   </div>
 </section>
 
@@ -19,6 +19,20 @@
         {{#each categories}}
           {{#if ../has_multiple_categories}}
             <li class="blocks-item">
+              <div class='category-image'>
+                {{#is name 'COURSES & PROGRAMS'}}
+                    <img src="{{asset 'icon-program.png'}}" />
+                {{/is}}
+                {{#is name 'PAYMENTS'}}
+                    <img src="{{asset 'icon-payment.png'}}" />
+                {{/is}}
+                {{#is name 'GENERAL FAQs'}}
+                    <img src="{{asset 'icon-faqs.png'}}" />
+                {{/is}}
+                {{#is name 'TROUBLESHOOTING'}}
+                    <img src="{{asset 'icon-troubleshooting.png'}}" />
+                {{/is}}
+              </div>
               <a href='{{url}}' class="blocks-item-link">
                 <span class="blocks-item-title">{{name}}</span>
                 <span class="blocks-item-description">{{excerpt description}}</span>
@@ -63,7 +77,8 @@
       </section>
     {{/if}}
   </section>
-
+<!-- Hide community/recent_activity from Zendesk theme as we don't have these enabled -->
+<!--
   {{#if help_center.community_enabled}}
     <section class="section home-section community">
       <h2>{{t 'community'}}</h2>
@@ -80,4 +95,5 @@
       {{recent_activity}}
     {{/if}}
   </section>
+ -->
 </div>
